add share link to mobile header

--- a/app/assets/stylesheets/redesign/_user.css.scss
+++ b/app/assets/stylesheets/redesign/_user.css.scss
@@ -63,6 +63,14 @@
     }
   }
 
+  .social-mobile {
+    text-align: center;
+    .footer-social--item {
+      padding-left: 5px;
+      padding-right: 5px;
+    }
+  }
+
   .or-share {
     display: inline-block;
     margin: 25px 0 20px;
