--- a/app/views/users/styleprofiles/show.html.slim
+++ b/app/views/users/styleprofiles/show.html.slim
@@ -21,6 +21,21 @@ coffee:
                 ' glam 
                 .visible-xs 50%
             .style-result.hidden-xs: .rhombus-container: .rhombus: .rhombus-text-holder: .rhombus-text 50%
+          .social-mobile.visible-xs
+            ul.footer-social
+              li.footer-social--item SHARE THE QUIZ
+              li.footer-social--item
+                = link_to configatron.links.facebook, target: :blank, class: 'facebook' do
+                  = image_tag '_icons/facebook.png'
+              li.footer-social--item
+                = link_to configatron.links.pinterest, target: :blank, class: 'pinterest' do
+                  = image_tag '_icons/pinterest.png'
+              li.footer-social--item
+                = link_to configatron.links.instagram, target: :blank, class: 'instagram' do
+                  = image_tag '_icons/instagram.png'
+              li.footer-social--item
+                = link_to configatron.links.twitter, target: :blank, class: 'twitter' do
+                  = image_tag '_icons/twitter.png'
         .col-md-4.text-center.hidden-xs
           .row
             .col-xs-6
