--- a/app/views/spree/shared/_google_analytics.html.erb
+++ b/app/views/spree/shared/_google_analytics.html.erb
@@ -91,6 +91,7 @@
   window._fbq = window._fbq || [];
   window._fbq.push(['track', '6016695263696', {value: '0.01', currency: '#{current_site_version.currency}' }]);
   window._fbq.push(['track', '6027613459126', {value: '0.01', currency: '#{current_site_version.currency}' }]);
+  window._fbq.push(['track', '6027496556826', {value: '0.01', currency: '#{current_site_version.currency}' }]);
 
   </script>
   <noscript><img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/tr?ev=6016695263696&amp;cd[value]=0.00&amp;cd[currency]=AUD&amp;noscript=1" /></noscript>
