--- a/engines/admin_ui/app/views/admin_ui/core/_menu_items.html.slim
+++ b/engines/admin_ui/app/views/admin_ui/core/_menu_items.html.slim
@@ -1,13 +1,13 @@
 
-li class=active_link_to_class(root_path)
+li class=active_link_to_class(root_path, active: :exact)
   = link_to root_path do
     i.fa.fa-dashboard
     span.nav-label Dashboard
 
-/li class=active_link_to_class('returns')
-/  = link_to '#' do
-/    i.fa.fa-thumbs-down
-/    span.nav-label Returns Management
+li class=active_link_to_class(return_requests_path)
+  = link_to return_requests_path do
+    i.fa.fa-thumbs-down
+    span.nav-label Returns Management
 
 li class=active_link_to_class(payments_report_path)
   a href="#"
