update only prom-styling header

--- a/app/assets/stylesheets/redesign/style_session.css.scss
+++ b/app/assets/stylesheets/redesign/style_session.css.scss
@@ -1,8 +1,9 @@
 .style-session-header {
-  background-image: url('contact/style-session-header2.jpg');
+  background-image: url('contact/style-session-header.jpg');
   height: 428px;
   background-size: cover;
   background-repeat: no-repeat;
+  &.prom { background-image: url('contact/style-session-header2.jpg');}
 }
 
 .style-session .form {
