--- a/engines/admin_ui/app/views/admin_ui/return_requests/_item.html.slim
+++ b/engines/admin_ui/app/views/admin_ui/return_requests/_item.html.slim
@@ -1,76 +1,18 @@
+- line_item = wrap_line_item(item.line_item)
 tr
-  td = item.id
-  td = item.line_item.product.name
-  td = item.line_item.size
-  td = item.action
+  td
+    p class=action_alert_class(item.action)
+      i class=action_icon_class(item.action)
+      = item.action
+  td = line_item.style_number
+  td = line_item.style_name
+  td = line_item.country_size
+  td = line_item.colour_name
+  td
+    ul.list-unstyled
+      - line_item.customisations_without_images.each do |c|
+        li = c
   td = item.reason_category
   td = item.reason
-
-/<div class="ibox float-e-margins">
-                    <div class="ibox-title">
-                        <span class="label label-warning pull-right">Data has changed</span>
-                        <h5>User activity</h5>
-                    </div>
-                    <div class="ibox-content">
-                        <div class="row">
-                            <div class="col-xs-4">
-                                <small class="stats-label">Pages / Visit</small>
-                                <h4>236 321.80</h4>
-                            </div>
-
-                            <div class="col-xs-4">
-                                <small class="stats-label">% New Visits</small>
-                                <h4>46.11%</h4>
-                            </div>
-                            <div class="col-xs-4">
-                                <small class="stats-label">Last week</small>
-                                <h4>432.021</h4>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="ibox-content">
-                        <div class="row">
-                            <div class="col-xs-4">
-                                <small class="stats-label">Pages / Visit</small>
-                                <h4>643 321.10</h4>
-                            </div>
-
-                            <div class="col-xs-4">
-                                <small class="stats-label">% New Visits</small>
-                                <h4>92.43%</h4>
-                            </div>
-                            <div class="col-xs-4">
-                                <small class="stats-label">Last week</small>
-                                <h4>564.554</h4>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="ibox-content">
-                        <div class="row">
-                            <div class="col-xs-4">
-                                <small class="stats-label">Pages / Visit</small>
-                                <h4>436 547.20</h4>
-                            </div>
-
-                            <div class="col-xs-4">
-                                <small class="stats-label">% New Visits</small>
-                                <h4>150.23%</h4>
-                            </div>
-                            <div class="col-xs-4">
-                                <small class="stats-label">Last week</small>
-                                <h4>124.990</h4>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
-/tr
-  td = return_request_item.id
-  td = return_request_item.line_item_id
-  td = return_request_item.action
-  td = return_request_item.reason_category
-  td = return_request_item.reason
-
-
+  td = image_tag(line_item.image_url, height: '100')
 
