--- a/engines/admin_ui/app/views/admin_ui/return_requests/show.html.slim
+++ b/engines/admin_ui/app/views/admin_ui/return_requests/show.html.slim
@@ -1,23 +1,22 @@
-
-= return_request.order.number
+- content_for :page_title do
+  = page_title
 
 = render return_request.order.user
+= render return_request.order
 
-
+h3 Order Return Items
 
 .ibox
   .ibox-content
     table.table
       thead : tr
-        th id
-        th item
-        th action
-        th category
-        th reason
+        th Action
+        th SKU
+        th Style Name
+        th Size
+        th Colour
+        th Customisations
+        th Category
+        th Reason
       tbody
-        = render partial: 'item', collection:  return_request.return_request_items
-
-
-
-
-
+        = render partial: 'item', collection: return_request.sorted_return_request_items
