--- a/engines/admin_ui/app/views/layouts/admin_ui/_topnavbar.html.slim
+++ b/engines/admin_ui/app/views/layouts/admin_ui/_topnavbar.html.slim
@@ -9,7 +9,7 @@
     /form.navbar-form-custom action="/" method="post" role="search"
         .form-group
           input#top-search.form-control name="top-search" placeholder=("Search for something...") type="text" /
-    ul.nav.navbar-top-links.navbar-right
+    /ul.nav.navbar-top-links.navbar-right
       li
         a href="#"
           i.fa.fa-sign-out
