[fixes][timer with modal] - show countdown after campaign auto started via fb login - show unescaped html

--- a/app/views/shared/_email_capture_modal.html.slim
+++ b/app/views/shared/_email_capture_modal.html.slim
@@ -40,7 +40,7 @@
         uuid:      \"#{campaign_uuid}\"
       });
     "
-    email_capture_modal += "modal_popup.enableAutoApply();" if auto_apply
+    email_capture_modal += "modal_popup.enableAutoApplyPromoCampaign();" if auto_apply
 
   = content_for :inline_javascript do
     = raw email_capture_modal
