--- a/app/assets/stylesheets/redesign/_modal.css.scss
+++ b/app/assets/stylesheets/redesign/_modal.css.scss
@@ -411,6 +411,11 @@
       font-size: 18px;
     }
   }
+  
+  // Signup Short
+  &.vex-signup-short {
+    .full-form { display: none !important;}
+  }
 
   // Timer
   &.vex-timer {
