--- a/app/views/layouts/redesign/campaigns/_auto_apply_promo_code.html.slim
+++ b/app/views/layouts/redesign/campaigns/_auto_apply_promo_code.html.slim
@@ -18,7 +18,7 @@
   span.spacer
   '
   span.banner-message
-  span.timer-box.timer-box-small
+  span.timer-box
     span
       span.hh 48
     span
