--- a/app/views/spree/admin/modals/index.html.erb
+++ b/app/views/spree/admin/modals/index.html.erb
@@ -171,16 +171,16 @@
   var PARAMS = [
     {
       label: "promocode",  param: "pc",  required: true,  encoded: true,  type: 'string',
-      defaultValue: '<%= decode(params[:pc]).html_safe %>'
+      defaultValue: '<%= escape_javascript decode(params[:pc]).html_safe %>'
     }, {
       label: "template name",param: "tn", required: false, encoded: true,  type: 'string',
       defaultValue: '<%= decode(params[:tn]).html_safe %>'
     }, {
       label: "heading",    param: "h",   required: false, encoded: true,  type: 'string',
-      defaultValue: '<%= decode(params[:h]).html_safe %>'
+      defaultValue: '<%= escape_javascript decode(params[:h]).html_safe %>'
     }, {
       label: "message",    param: "m",   required: false, encoded: true,  type: 'string',
-      defaultValue: '<%= decode(params[:m]).html_safe %>'
+      defaultValue: '<%= escape_javascript decode(params[:m]).html_safe %>'
     }, {
       label: "timeout",    param: "t",   required: false, encoded: false, type: 'integer',
       defaultValue: '<%= params[:t] || 2 %>'
@@ -189,7 +189,7 @@
       defaultValue: '<%= decode(params[:ti]).html_safe %>'
     }, {
       label: "class_name", param: "s",   required: false, encoded: true,  type: 'string',
-      defaultValue: '<%= decode(params[:s]).html_safe %>'
+      defaultValue: '<%= escape_javascript decode(params[:s]).html_safe %>'
     }, {
       label: "pop",        param: "pop", required: true,  encoded: false, type: 'boolean',
       defaultValue: 'true'
