[timer popups fixes] - correctly handle failed facebook logins - don't reset autoapply on second login attempt - autoapply works only for logged users ( problably, we should have smt like 'email_captured' key )

--- a/app/views/shared/_email_capture_modal.html.slim
+++ b/app/views/shared/_email_capture_modal.html.slim
@@ -22,8 +22,12 @@
     timer         = decode(params[:ti])
     campaign_uuid = decode(params[:cu])
 
-    auto_apply    = session[:auto_apply]
-    session.delete(:auto_apply)
+    if spree_user_signed_in?
+      auto_apply    = session[:auto_apply]
+      session.delete(:auto_apply)
+    else
+      auto_apply    = false
+    end
 
     email_capture_modal = "
       var modal_popup = new window.page.EmailCaptureModal({
