--- a/app/assets/stylesheets/redesign/_modal.css.scss
+++ b/app/assets/stylesheets/redesign/_modal.css.scss
@@ -419,6 +419,9 @@
 
   // Timer
   &.vex-timer {
+    .vex-content {
+      width: 780px;
+    }
     .vex-dialog-message {
       h3 {
         font-size: 28px;
@@ -429,6 +432,7 @@
           margin-bottom: 10px;
           font-size: 33px;
           font-weight: 400;
+          text-transform: uppercase;
         }
       }
     }
