[feat] wedding mailer

--- a/app/views/marketing_mailer/bridesmaids_consultation_form.html.slim
+++ b/app/views/marketing_mailer/bridesmaids_consultation_form.html.slim
@@ -1,1 +1,2 @@
-= link_to "Submit wedding consultation form", '#'
+| Please follow the link
+= link_to "Wedding Consultation", wedding_consultation_url
