--- a/app/views/wedding_consultation_mailer/email.text.erb
+++ b/app/views/wedding_consultation_mailer/email.text.erb
@@ -6,5 +6,5 @@ Date of Birth: <%= @wedding_consultation.dob %>
 Location: <%= @wedding_consultation.location %>
 Skype ID: <%= @wedding_consultation.skype_id %>
 Time Zone: <%= @wedding_consultation.timezone %>
-
+About wedding: <%= @wedding_consultation.info %>
 --------------------------------------------
