fix alert position

--- a/app/assets/stylesheets/redesign/_alerts.css.scss
+++ b/app/assets/stylesheets/redesign/_alerts.css.scss
@@ -9,6 +9,9 @@
   text-transform: uppercase;
   font-size: 18px;
   padding: 10px 0;
+  &.alert-relative {
+    position: relative;
+  }
   .close {
     @extend .icon-cross;
     position: absolute;
