--- a/app/views/layouts/redesign/campaigns/_auto_apply_promo_code.html.slim
+++ b/app/views/layouts/redesign/campaigns/_auto_apply_promo_code.html.slim
@@ -12,7 +12,7 @@
   = content_for :inline_javascript do
     = raw enable_countdown_banner
 
-#countdown-banner.alert-sale.hidden role="alert"
+#countdown-banner.alert-sale.alert-relative.hidden role="alert"
   a.close href="#"
   span.medium.banner-title
   span.spacer
