fix timer alert on product page

--- a/app/assets/stylesheets/redesign/_alerts.css.scss
+++ b/app/assets/stylesheets/redesign/_alerts.css.scss
@@ -56,4 +56,9 @@
       padding-right: 5px;
     }
   }
+
+  // Fix for product page
+  &:not(.hidden) ~ .product-content {
+    top: 13rem;
+  }
 }
