--- a/app/assets/stylesheets/redesign/_modal.css.scss
+++ b/app/assets/stylesheets/redesign/_modal.css.scss
@@ -496,10 +496,6 @@
             text-decoration: underline;
             color: #000;
           }
-          a.btn {
-            text-decoration: none;
-            color: #FFFFFF;
-          }
         }
       }
       p {
@@ -521,6 +517,14 @@
         a {
           text-decoration: underline;
           color: #000;
+        }
+        a.btn {
+          text-decoration: none;
+          color: #FFFFFF;
+        }
+        a.btn:hover {
+          text-decoration: none;
+          color: #FFFFFF;
         }
       }
       .timer-box {
