[feat][modals] add fb pixel id to modal generator

--- a/app/views/spree/admin/modals/index.html.erb
+++ b/app/views/spree/admin/modals/index.html.erb
@@ -216,6 +216,10 @@
       label: "class_name", param: "s",   required: false, encoded: true,  type: 'string',
       defaultValue: decodedDefaultParam('s')
     }, {
+      label: "facebook pixel id", param: "fb", required: false, encoded: true,  type: 'string',
+      defaultValue: decodedDefaultParam('fb')
+    },
+    {
       label: "pop",        param: "pop", required: true,  encoded: false, type: 'boolean',
       defaultValue: 'true'
     }, {
