[feat][modals] fire fb tracking pixels on modal success

--- a/app/views/shared/_email_capture_modal.html.slim
+++ b/app/views/shared/_email_capture_modal.html.slim
@@ -18,6 +18,7 @@
     message       = decode(params[:m])
     content       = decode(params[:c]) || promocode
     class_name    = decode(params[:s]) || class_name
+    fb_id         = decode(params[:fb])
     timeout       = params[:t] || 3
     timer         = decode(params[:ti])
     campaign_uuid = decode(params[:cu])
@@ -36,6 +37,7 @@
         heading:   \"#{heading}\",
         message:   \"#{message}\",
         className: \"#{class_name}\",
+        fb:        \"#{fb_id}\",
         action:    \"#{campaigns_email_capture_path}\",
         container: \"#modal-popup-content-template\",
         timeout:    #{auto_apply ? 100000 : timeout},
