--- a/app/views/products/details/show.html.slim
+++ b/app/views/products/details/show.html.slim
@@ -212,11 +212,12 @@ hr
 
 #product-overlay
 
-= render partial: 'side_panel_sizes'
+- cache [:side_panels, @product.id, current_site_version.code], expires_in:  configatron.cache.expire.long  do
+  = render partial: 'side_panel_sizes'
 
-= render partial: 'side_panel_colours'
+  = render partial: 'side_panel_colours'
 
-= render partial: 'side_panel_customisation'
+  = render partial: 'side_panel_customisation'
 
-- if @product.making_options.present?
-  = render partial: 'side_panel_making_options', locals: { making_options: @product.making_options }
+  - if @product.making_options.present?
+    = render partial: 'side_panel_making_options', locals: { making_options: @product.making_options }
