--- a/engines/admin_ui/app/views/layouts/admin_ui.html.slim
+++ b/engines/admin_ui/app/views/layouts/admin_ui.html.slim
@@ -2,6 +2,7 @@ doctype html
 html
   head
     title Fame Admin
+    = stylesheet_link_tag "//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js"
     = stylesheet_link_tag    "admin_ui", :media => "all"
     = stylesheet_link_tag '//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'
     = javascript_include_tag "admin_ui"
