[feature] change button Fit Guide to Size Guide and rearrange the texts in About the Dress section
I change buttons Fit Guide to Size Guide , put The Story section to top left of About the Dress section , display the Size and Fit section at top right , change "what it is made of" to  "Fabric & Trims",change "sku" to "SKU" and display Care Instructions hard coded text.

WARNING: Size and Fit text taken from our database are lack of new lines

--- a/app/views/products/details/_side_panel_sizes.html.slim
+++ b/app/views/products/details/_side_panel_sizes.html.slim
@@ -12,7 +12,7 @@
 
     .row
       .col-md-10.col-md-offset-1
-        button.btn-fit-guide.btn.btn-block.btn-secondary Fit Guide
+        button.btn-fit-guide.btn.btn-block.btn-secondary Size Guide
 
 
   .sizes-container.grey
