--- a/app/views/products/details/show.html.slim
+++ b/app/views/products/details/show.html.slim
@@ -118,7 +118,7 @@ ruby:
 
     .row.secondary-actions
       .col-md-6.col-xs-6.col-xxs-12
-        button#fit-guide.btn.btn-block.btn-secondary Fit Guide
+        button#fit-guide.btn.btn-block.btn-secondary Size Guide
 
       .col-md-6.col-xs-6.col-xxs-12
         - if Features.active?(:moodboard)
@@ -135,7 +135,10 @@ ruby:
   .divider
   .row
     .col-md-6.col-sm-12.hidden-xs
-      h3 Dress Inspiration
+      h4 The Story
+      div=raw @product.description
+
+      h4 Dress Inspiration
       .inspiration
         .row
           .box.col-sm-4.no-padding
@@ -161,23 +164,33 @@ ruby:
           p Images courtesy of Google
 
     .col-md-6.col-sm-12
-      h3 The Story
+      - if @product.size_and_fit?
+        h4 About our #famebabe
+        p= raw @product.size_and_fit.gsub("\n", '<br/>')
+
+      - if @product.dress_length?
+        p= raw @product.dress_length.gsub("\n", '<br/>')
 
       - if @product.preorder?
         .pre-order
           strong Pre-order
           | This item will ship within 4 weeks
-      div=raw @product.description
 
       - if @product.style_notes
         h4 Style it with
         p= raw @product.style_notes
 
-      - if @product.fabric
-        h4 What's it made of
+      - if @product.fabric?
+        h4 Fabric & Trims
         p= raw @product.fabric.gsub("\n", '<br/>')
 
-      p.sku sku: #{@product.sku}
+      h4 Care Instructions
+      p
+        | Professional dry-clean only
+        br
+        | See garment care label for further details on how to care for your garment
+
+      p.sku SKU: #{@product.sku}
 
 hr
 
