--- a/app/views/spree/admin/taxons/_form.html.erb
+++ b/app/views/spree/admin/taxons/_form.html.erb
@@ -12,6 +12,11 @@
       <%= text_field_tag :permalink_part, @permalink_part %>
     <% end %>
 
+    <%= f.field_container :published_at do %>
+      <%= f.label :published_at, t(:published_at) %>
+      <%= f.text_field :published_at, :value => datepicker_field_value(@taxon.published_at), :class => 'datepicker' %>
+    <% end %>
+
     <%= f.field_container :icon do %>
       <%= f.label :icon, t(:icon) %><br />
       <%= f.file_field :icon %>
