{copy] Use contact form instead of emails

--- a/app/views/statics/ecom_terms.html.slim
+++ b/app/views/statics/ecom_terms.html.slim
@@ -9,11 +9,15 @@
 
       p Welcome to Fame &amp; Partners! This Web site located at www.fameandpartners.com (this "Site") is owned and operated by Fame &amp; Partners Pty Ltd ("Company"). This Site and any purchases made through this Site are governed by the terms of service, use and purchase described below ("Terms").
 
-      p Fame &amp; Partners is committed to ensuring every girl discovers and crafts the coolest and most individual look for her special occasion. We were founded in Bondi Beach, Australia but now have offices in New York as well. We ship internationally with a secure courier service and have customer service on call to work with our customers, wherever they may be. Enjoy your shopping experience with Fame &amp; Partners and don’t be afraid to give us feedback at: team@fameandpartners.com.
+      p
+        ' Fame &amp; Partners is committed to ensuring every girl discovers and crafts the coolest and most individual look for her special occasion. We were founded in Bondi Beach, Australia but now have offices in New York as well. We ship internationally with a secure courier service and have customer service on call to work with our customers, wherever they may be. Enjoy your shopping experience with Fame &amp; Partners and don’t be afraid to give us feedback via our
+        = link_to 'Contact Form', new_contact_path
 
       p By using this Site, purchasing products and services through this Site, you agree to be bound by these terms, so please review this entire page carefully. These terms are designed to clearly provide you with a description of the Fame &amp; Partners general terms and conditions regarding purchasing products and services from Fame &amp; Partners and use of this Site
 
-      p You must be at least 15 years old to purchase Fame &amp; Partners products from this Site or use the Fame &amp; Partners services. The Company reserves the right in its discretion to revise the Terms from time to time so please check back here periodically for updates. By continuing to use or purchase products from this Site and/or by remaining a member of the Fame &amp; Partners Membership Program, you accept and agree to the Company's right to revise the Terms from time to time and to be bound by such changes, so long as they are promptly posted on the Site. If you do not wish to be bound to these Terms (or any revisions to these Terms), please do not use this Site or the Company's services and immediately cancel your Fame &amp; Partners Membership by emailing team@fameandpartners.com.
+      p
+        ' You must be at least 15 years old to purchase Fame &amp; Partners products from this Site or use the Fame &amp; Partners services. The Company reserves the right in its discretion to revise the Terms from time to time so please check back here periodically for updates. By continuing to use or purchase products from this Site and/or by remaining a member of the Fame &amp; Partners Membership Program, you accept and agree to the Company's right to revise the Terms from time to time and to be bound by such changes, so long as they are promptly posted on the Site. If you do not wish to be bound to these Terms (or any revisions to these Terms), please do not use this Site or the Company's services and immediately cancel your Fame &amp; Partners Membership via our
+        = link_to 'Contact Form', new_contact_path
 
       h2 SHIPPING
 
@@ -34,7 +38,10 @@
 
         li We only accept returns or exchanges up to 30 days from the original date of shipment. Any item to be returned or exchanged must be in new, unused and resalable condition, with the DO NOT REMOVE tag still attached in the same place as originally sent. We photograph every product as part of our QA process so we know where the DO NOT REMOVE tag was attached. Any exchange or return should be sent back in the original, undamaged packaging, plus any accessories or extras that may have been included with the shipment. For full priced garments, we do not charge a restocking fee unless they are customised. For any discounted items, including but not limited to sale items and items purchased with a discount code we charge a $14.95 restocking fee, when returned for a refund. Items exchanged for another item or returned for a credit are not charged a restocking fee.
 
-        li If you purchase multiple sizes in one style/colour we will only accept an exchange for the returning sizes. We do not offer refunds if you are returning for this reason. If you are confused about your size, simply contact our friendly customer service team at team@fameandpartners.com to assist you in working out best fit for you.
+        li
+          ' If you purchase multiple sizes in one style/colour we will only accept an exchange for the returning sizes. We do not offer refunds if you are returning for this reason. If you are confused about your size, simply contact our friendly customer service team via our
+          => link_to 'Contact Form', new_contact_path
+          ' to assist you in working out best fit for you.
 
         li If your purchase includes more than 1 style in the same size, we can only offer a full refund for 1 style; if you would like to return more from this order, we can offer an exchange or credit if you meet all other returns criteria.
 
