[tweak] Add border to mega menu

--- a/app/assets/stylesheets/redesign/_header.css.scss
+++ b/app/assets/stylesheets/redesign/_header.css.scss
@@ -30,6 +30,7 @@
   background-color: #fff;
   padding-top: 15px;
   padding-bottom: 15px;
+  border-bottom:3px solid $gray-light-bg; 
 }
 
 .link-header {
